fix(styling): using margin when gap is not supported by browser

--- a/next-tavla/src/Board/scenarios/Board/styles.module.css
+++ b/next-tavla/src/Board/scenarios/Board/styles.module.css
@@ -18,4 +18,10 @@
     .board {
         display: flex;
     }
+
+    @supports not (gap: 10px) {
+        .board > * {
+            margin: 10px;
+        }
+    }
 }
